--- a/src/styles.css
+++ b/src/styles.css
@@ -73,6 +73,7 @@ button {
   border-radius: 3.81277px;
   color: white;
   font-family: "Karla";
+  cursor:pointer;
 }
 .die-dot {
   /* position:absolute; */
@@ -130,7 +131,7 @@ button {
 }
 .no-of-rolls {
   font-family: "karla";
-  /* margin:10px auto; */
+  margin:10px auto;
 }
 .no-of-rolls span {
   font-size: 16px;
